--- a/qrcodeStyling.css
+++ b/qrcodeStyling.css
@@ -31,6 +31,26 @@ hr {
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
-
+#footer-links-container ul {
+    list-style-type: none;
+    padding-left: 0px !important;
+  }
+  
+  #footer-links-container > :first-child {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 15px;
+  }
+  
+  @media (min-width: 768px) {
+    .hero-tagline {
+      font-size: 7rem;
+    }
+  }
+  
+  #footer-links-container ul {
+    padding-left: 30px !important;
+  }
+  
 
 
