--- a/qrcodeStyling.css
+++ b/qrcodeStyling.css
@@ -31,26 +31,98 @@ hr {
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
-#footer-links-container ul {
-    list-style-type: none;
-    padding-left: 0px !important;
-  }
-  
-  #footer-links-container > :first-child {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 15px;
-  }
-  
-  @media (min-width: 768px) {
-    .hero-tagline {
-      font-size: 7rem;
+
+body {
+    background-color: #eee
+}
+
+.container {
+    position: relative
+}
+
+.center {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+
+.buttons {
+    padding: 10px;
+    background-color: #d6d4d4;
+    border-radius: 8px;
+    position: relative
+}
+
+.dot {
+    height: 14px;
+    width: 14px;
+    background-color: green;
+    border-radius: 50%;
+    position: absolute;
+    left: 27%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 8px;
+    color: #fff;
+    opacity: 0
+}
+
+.cart-button {
+    height: 48px
+}
+
+.cart-button:focus {
+    box-shadow: none
+}
+
+.cart {
+    position: relative;
+    height: 48px !important;
+    width: 50px;
+    margin-right: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    padding: 11px;
+    border-radius: 5px;
+    font-size: 21px
+}
+
+.cart-button.clicked span.dot {
+    animation: item 0.3s ease-in forwards
+}
+
+@keyframes item {
+    0% {
+        opacity: 1;
+        top: 30%;
+        left: 30%
     }
-  }
-  
-  #footer-links-container ul {
-    padding-left: 30px !important;
-  }
-  
 
+    25% {
+        opacity: 1;
+        left: 26%;
+        top: 0%
+    }
 
+    50% {
+        opacity: 1;
+        left: 23%;
+        top: -22%
+    }
+
+    75% {
+        opacity: 1;
+        left: 19%;
+        top: -18%
+    }
+
+    100% {
+        opacity: 1;
+        left: 14%;
+        top: 28%
+    }
+}
